# EstudosProgramacao

./: .gitignore  README.md
Flutter/Projetos/liturgias_diarias_comentadas/: README.md  pubspec.yaml
Flutter/Projetos/liturgias_diarias_comentadas/android/app/: build.gradle.kts
Flutter/Projetos/liturgias_diarias_comentadas/ios/Runner/: Info.plist
Flutter/Projetos/liturgias_diarias_comentadas/ios/Runner.xcodeproj/: project.pbxproj
Flutter/Projetos/liturgias_diarias_comentadas/lib/: main.dart
Flutter/Projetos/liturgias_diarias_comentadas/linux/: CMakeLists.txt
Flutter/Projetos/liturgias_diarias_comentadas/web/: index.html  manifest.json
Flutter/Projetos/liturgias_diarias_comentadas/windows/: CMakeLists.txt
Flutter/Projetos/teste/: pubspec.yaml
Flutter/Projetos/teste/lib/: main.dart
Python/CursoFastAPI/: .gitignore  doc.doc  requirements.txt
Python/CursoFastAPI_Udemy/Introducao/: async_await_overview.py  doc.doc  main.py  pyproject.toml
Python/CursoFastAPI_Udemy/Projeto1/: .env  converter.py  doc.doc  main.py  pyproject.toml  routers.py  schema.py
Python/CursoFastAPI_Udemy/Projeto2/: .env  Dockerfile  doc.doc  docker-compose.yml  pyproject.toml
Python/CursoFastAPI_Udemy/Projeto2/app/: main.py
Python/IA/BaixarVideoYoutube/: doc.doc  mp3_to_wav.py  resume.py  script.py
Python/Projetos/liturgia_diaria_comentada/: .gitignore
Python/Projetos/liturgia_diaria_comentada/api/: CrudFirebase.py  apiGeminai.py  arquivo-baixado.json  buscaLiturgias.py  dados.json  doc.doc  main.py  resultado.json  testando.py  testando2.py  testando3.py  teste4.py  teste5.py  teste6.py
liturgia_diaria_comentada/api/: testando.py
(+18 files in other folders)
